feat(remedio-templates): created for to list medications and improved style of the page

--- a/pharmadjango/remedios/templates/remedios/index.html
+++ b/pharmadjango/remedios/templates/remedios/index.html
@@ -13,6 +13,14 @@
         <h1>PharmaDjango</h1>
     </header>
     <section>
+        {% for remedio in remedios %}
+            <div>
+                <h2>{{ remedio.nome }}</h2>
+                <p>Tarja: {{ remedio.tarja }}</p>
+                <p>Precisa de Receita: {{ remedio.precisa_receita }}</p>	
+                <p class='price'>Preço: R$ {{ remedio.preco }}</p>
+            </div>
+        {% endfor %}
     </section>
 </body>
 </html>
