--- a/pharmadjango/remedios/static/remedios/css/style.css
+++ b/pharmadjango/remedios/static/remedios/css/style.css
@@ -1,28 +1,58 @@
-*{
+* {
     margin: 0;
-}
-
-body{
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
     font-family: sans-serif;
     background-image: url("../img/background.jpg");
-    background-size: 100%;
-    background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
     background-attachment: fixed;
-}
-
-header{
+  }
+  
+  header {
     padding: 1.2em;
     background-color: mediumaquamarine;
     color: white;
-}
-
-section{
+  }
+  
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-top: 2rem;
+  }
+  
+  section {
+    margin: 2rem auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 800px;
+  }
+  
+  div {
     background-color: white;
-    height: 500px;
-    width: 700px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
+    width: 300px;
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid gray;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  p {
+    margin-bottom: 0.5rem;
+  }
+  
+  .price {
+    font-weight: bold;
+    font-size: 1.2rem;
+  }
