Adicionado funcionalidade de cadastro dos remédios

--- a/pharmadjango/remedios/templates/remedios/index.html
+++ b/pharmadjango/remedios/templates/remedios/index.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <h1>PharmaDjango</h1>
+        <a href="/remedios/cadastramedicamentos">Cadastrar Remédio</a>
     </header>
     <section>
         {% if remedios %}
