--- a/pharmadjango/remedios/static/remedios/css/style2.css
+++ b/pharmadjango/remedios/static/remedios/css/style2.css
@@ -34,7 +34,8 @@
   
   div {
     background-color: rgb(255, 255, 255);
-    width: 300px;
+    width: 600px;
+    height: 400px;
     margin: 1rem;
     padding: 1rem;
     border: 1px solid gray;
@@ -43,20 +44,10 @@
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
   }
   
-  h2 {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-  }
-  
   p {
     margin-bottom: 0.5rem;
   }
   
-  .price {
-    font-weight: bold;
-    font-size: 1.2rem;
-  }
-
   a{
     text-decoration: none;
     color: white;
@@ -71,3 +62,29 @@
     margin-top: 1em;
     text-align: center;
   }
+
+label{
+  display: block;
+  margin-bottom: 1em;
+  margin-top: 1em;
+  font-weight: bold;
+}
+
+input{
+  border-style: none;
+  border-bottom-style: solid;
+  outline-style: none;
+}
+
+#submit-button{
+  display: block;
+  margin: auto;
+  margin-top: 1.5em;
+  border-style: solid;
+  color: white;
+  border-color: rgb(53, 124, 100);
+  background-color: rgb(70, 165, 134);
+  padding: 1em;
+  font-size: 1em;
+  cursor: pointer;
+}
