--- a/pharmadjango/remedios/static/remedios/css/style.css
+++ b/pharmadjango/remedios/static/remedios/css/style.css
@@ -71,3 +71,16 @@
     margin-top: 1em;
     text-align: center;
   }
+
+  footer{
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 0;
+    background-color: mediumaquamarine;
+    color: #fff;
+    width: 100%;
+    height: 5vh;
+    text-align: center;
+    align-items: center;
+    padding-top: 10px;
+    }
