--- a/pharmadjango/remedios/static/remedios/css/style2.css
+++ b/pharmadjango/remedios/static/remedios/css/style2.css
@@ -88,3 +88,16 @@ input{
   font-size: 1em;
   cursor: pointer;
 }
+
+footer{
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 0;
+  background-color: mediumaquamarine;
+  color: #fff;
+  width: 100%;
+  height: 5vh;
+  text-align: center;
+  align-items: center;
+  padding-top: 10px;
+  }
