--- a/pharmadjango/remedios/static/remedios/css/style2.css
+++ b/pharmadjango/remedios/static/remedios/css/style2.css
@@ -101,3 +101,31 @@ footer{
   align-items: center;
   padding-top: 10px;
   }
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px; /* Adicione o espaçamento desejado */
+}
+
+.title {
+  margin-right: 10px;
+}
+
+.price {
+  margin-right: 10px;
+}
+
+.remove-btn {
+  background-color: #ff0000;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin-left: 10px;
+}
