--- a/pharmadjango/remedios/templates/remedios/view_func.html
+++ b/pharmadjango/remedios/templates/remedios/view_func.html
@@ -17,7 +17,7 @@
     <section>
         {% if remedios %}
             {% for remedio in remedios %}
-                <div>
+                <div class="remedio-card">
                     <h2>{{ remedio.nome }}</h2>
                     <p>Tarja: {{ remedio.tarja }}</p>
                     <p>Precisa de Receita: {{ remedio.precisa_receita }}</p>	
