--- a/pharmadjango/remedios/templates/remedios/view_cliente.html
+++ b/pharmadjango/remedios/templates/remedios/view_cliente.html
@@ -17,11 +17,11 @@
     <section>
         {% if remedios %}
             {% for remedio in remedios %}
-                <div>
+                <div class="remedio-card">
                     <h2>{{ remedio.nome }}</h2>
                     <p>Tarja: {{ remedio.tarja }}</p>
                     <p>Precisa de Receita: {{ remedio.precisa_receita }}</p>	
-                    <p class='price'>Preço: R$ {{ remedio.preco }}</p>
+                    <p class="price">Preço: R$ {{ remedio.preco }}</p>
                     <a href="{% url 'adicionar_carrinho' remedio.id %}">Adicionar ao Carrinho</a>
                 </div>
             {% endfor %}
